Have Done All Function

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SQLiteContactApp">
+        android:theme="@style/Theme.SQLiteContactApp.NoActionBar">
         <activity
             android:name=".AddEditActivity"
             android:exported="false" />
